--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ test.py
 .idea/*
 data
 .nfs*
+.vscode
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -150,3 +151,6 @@ cython_debug/
 
 # MedMNIST datasets as they are too large
 MedMNIST_Datasets/
+
+# Test folder when trying stuff out
+test/
