Avoid clash between alpha and alphaDirichlet. Add nohup.out to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,7 @@ MedMNIST_Datasets/
 
 # Test folder when trying stuff out
 test/
+
+# Scripts used for running without an active connection
+RUNME.sh
+nohup.out
